--- a/templates/newsletter/templates/default.html
+++ b/templates/newsletter/templates/default.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    <link href="/static/css/style.css" rel="stylesheet">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.vstech.co.ke/static/css/style.css" rel="stylesheet">
+    <link href="https://www.vstech.co.ke/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body style="justify-content:center !important;">
@@ -155,7 +155,7 @@
                                                                 <tr>
                                                                     <td align="center" style="line-height: 0px;"><img
                                                                             editable="" label="image" mc:edit="main-9-48"
-                                                                            src="/static/email_header_1.png"
+                                                                            src="https://www.vstech.co.ke/static/email_header_1.png"
                                                                             alt="img" width="100%" height="auto"
                                                                             style="display:block; line-height:0px; font-size:0px; border:0px; width: 100%;">
                                                                     </td>
@@ -227,7 +227,7 @@
 
 
                         <table
-                            data-thumbnail="/static/images/background/2.jpg"
+                            data-thumbnail="https://www.vstech.co.ke/static/images/background/2.jpg"
                             data-module="footer" data-bgcolor="Main BG" class="full bg-image" width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                             <tbody>
                                 <tr>
@@ -253,7 +253,7 @@
                                                                                 <tr>
                                                                                     <td align="center"
                                                                                         style="line-height: 0px;"><img
-                                                                                            src="/static/images/logo-2.png"
+                                                                                            src="https://www.vstech.co.ke/static/images/logo-2.png"
                                                                                             alt="img" width="124"
                                                                                             style="display:block; line-height:0px; font-size:0px; border:0px;"
                                                                                             editable="" label="image"
@@ -297,7 +297,7 @@
                                                                     <td data-size="Footer List" data-color="Footer List"
                                                                     mc:edit="main-9-54" align="center"
                                                                     style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
-                                                                    <singleline label="list"><a href="{% url 'contact' %}" class="text-secondary">Contact Page</a></singleline>
+                                                                    <singleline label="list"><a href="https://www.vstech.co.ke/{% url 'contact' %}" class="text-secondary">Contact Page</a></singleline>
                                                                 </td>
                                                             </tr>
                                                             <tr>
@@ -346,21 +346,21 @@
                                                                     <td data-size="Footer List" data-color="Footer List"
                                                                         mc:edit="main-9-57" align="center"
                                                                         style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
-                                                                        <singleline label="list"><a href="{% url 'about' %}" class="text-secondary">About Us</a></singleline>
+                                                                        <singleline label="list"><a href="https://www.vstech.co.ke/{% url 'about' %}" class="text-secondary">About Us</a></singleline>
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td data-size="Footer List" data-color="Footer List"
                                                                         mc:edit="main-9-58" align="center"
                                                                         style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
-                                                                        <singleline label="list"><a href="{% url 'users:team' %}" class="text-secondary">The Team</a></singleline>
+                                                                        <singleline label="list"><a href="https://www.vstech.co.ke/{% url 'users:team' %}" class="text-secondary">The Team</a></singleline>
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td data-size="Footer List" data-color="Footer List"
                                                                         mc:edit="main-9-59" align="center"
                                                                         style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
-                                                                        <singleline label="list"><a href="{% url 'blog:list' %}" class="text-secondary">News & Media</a></singleline>
+                                                                        <singleline label="list"><a href="https://www.vstech.co.ke/{% url 'blog:list' %}" class="text-secondary">News & Media</a></singleline>
                                                                     </td>
                                                                 </tr>
                                                             </tbody>
@@ -395,21 +395,21 @@
                                                                     <td data-size="Footer List" data-color="Footer List"
                                                                         mc:edit="main-9-61" align="center"
                                                                         style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
-                                                                        <singleline label="list"><a href="{% url 'project:list' %}" class="text-secondary">Projects</a></singleline>
+                                                                        <singleline label="list"><a href="https://www.vstech.co.ke/{% url 'project:list' %}" class="text-secondary">Projects</a></singleline>
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td data-size="Footer List" data-color="Footer List"
                                                                         mc:edit="main-9-62" align="center"
                                                                         style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
-                                                                        <singleline label="list"><a href="{% url 'shop:list' %}" class="text-secondary">Shop</a></singleline>
+                                                                        <singleline label="list"><a href="https://www.vstech.co.ke/{% url 'shop:list' %}" class="text-secondary">Shop</a></singleline>
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td data-size="Footer List" data-color="Footer List"
                                                                         mc:edit="main-9-63" align="center"
                                                                         style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
-                                                                        <singleline label="list"><a href="{% url 'faq' %}" class="text-secondary">FAQs</a></singleline>
+                                                                        <singleline label="list"><a href="https://www.vstech.co.ke/{% url 'faq' %}" class="text-secondary">FAQs</a></singleline>
                                                                     </td>
                                                                 </tr>
                                                             </tbody>
@@ -457,7 +457,7 @@
                                                                                         mc:edit="main-9-64"
                                                                                         style="font-family: 'Open Sans', Arial, sans-serif; font-size:13px; color:gray; ">
                                                                                         <singleline label="copyright">
-                                                                                            © {{ current_year }} <a href="/" class="text-dark">VSTech Limited</a>. All Rights Reserved
+                                                                                            © {{ current_year }} <a href="https://www.vstech.co.ke/" class="text-dark">VSTech Limited</a>. All Rights Reserved
                                                                                         </singleline>
                                                                                     </td>
                                                                                 </tr>
@@ -505,7 +505,7 @@
                                                                                         </webversion>
                                                                                         <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                                                                                         <unsubscribe>
-                                                                                            <form action="{% url 'subscribe:unsubscribe' %}" method="get">
+                                                                                            <form action="https://www.vstech.co.ke/{% url 'subscribe:unsubscribe' %}" method="get">
                                                                                                 <input type="hidden" name="email" value="{{ recipient_email }}">
                                                                                                 <input type="submit" value="unsubscribe" style="background-color: transparent; color: gray;">
                                                                                             </form>
