--- a/templates/newsletter/templates/default.html
+++ b/templates/newsletter/templates/default.html
@@ -203,8 +203,8 @@
                                                                         <singleline label="link">
                                                                             {{ author.get_full_name }}, <br>
                                                                             {{ author.team.rank|default:'Member' }}, <br>
-                                                                            <a href="mailto:{{ author.email }}">{{ author.email }}</a> | <a href="tel:{{ author.profile.phone_number }}">{{ author.profile.phone_number }}</a>|<a href="https://www.vstech.co.ke">wwww.vstech.co.ke</a>
-                                                                            <a href="https://www.vstech.co.ke/unsubscribe/{{ recipient_email }}/" style="color: gray;">Unsubscribe</a>
+                                                                            <a href="mailto:{{ author.email }}">{{ author.email }}</a> | <a href="tel:{{ author.profile.phone_number }}">{{ author.profile.phone_number }}</a><br>
+                                                                            <a href="https://www.vstech.co.ke" style="color: gray;">www.vstech.co.ke</a> | <a href="https://www.vstech.co.ke/unsubscribe/{{ recipient_email }}/" style="color: gray;">Unsubscribe</a>
                                                                         </singleline>
                                                                     </td>
                                                                 </tr>
