--- a/templates/newsletter/templates/products.html
+++ b/templates/newsletter/templates/products.html
@@ -11,8 +11,6 @@
             text-decoration: none !important;
         }
     </style>
-    <link href="https://www.vstech.co.ke/static/css/style.css" rel="stylesheet">
-    <link href="https://www.vstech.co.ke/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body style="justify-content:center !important;">
@@ -1266,7 +1264,7 @@
                             <td align="center">
                                 <div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div>
                                 <table class="table-inner ui-resizable" width="600" style="max-width: 600px;"
-                                    border="0" align="center" cellpadding="0" cellspacing="0">
+                                    border="0" align="center" cellpadding="2" cellspacing="0">
                                     <tbody>
                                         <tr>
                                             <td height="20"></td>
@@ -1413,17 +1411,6 @@
                                                     <!--title-->
                                                     <tbody>
                                                         <tr>
-                                                            <td data-color="Footer Title" data-size="Footer Title"
-                                                                mc:edit="main-9-56" align="center"
-                                                                style="font-family: 'Open sans', Arial, sans-serif; color:#918f8f; font-size:18px; ">
-                                                                <singleline label="title" class="widget-title">>></singleline>
-                                                            </td>
-                                                        </tr>
-                                                        <!--end title-->
-                                                        <tr>
-                                                            <td height="5"></td>
-                                                        </tr>
-                                                        <tr>
                                                             <td data-size="Footer List" data-color="Footer List"
                                                                 mc:edit="main-9-61" align="center"
                                                                 style="font-family: 'Open sans', Arial, sans-serif; color:#ffffff; font-size:14px;line-height:28px;">
@@ -1473,7 +1460,7 @@
                                             <td height="15"></td>
                                         </tr>
                                         <tr>
-                                            <td>
+                                            <td style="padding:0 20px 20px 20px;">
                                                 <!-- copyright -->
                                                 <table class="table-full" border="0" align="left" cellpadding="0"
                                                     cellspacing="0">
@@ -1527,15 +1514,6 @@
                                                                                 mc:edit="main-9-65"
                                                                                 class="textbutton"
                                                                                 style="font-family: 'Open Sans', Arial, sans-serif; font-size:13px; display:flex; flex-wrap:nowrap;">
-                                                                                <webversion>
-                                                                                    <ul style="display: flex; flex-wrap:nowrap;">
-                                                                                        <li><a href="{{ about.twitter|default:'https://twitter.com/vstech_ltd' }}">tw</span></a></li>
-                                                                                        <li><a href="{{ about.facebook|default:'https://fb.com' }}" class="mx-2 text-dark">fb</a></li>
-                                                                                        <li><a href="{{ about.linkedin|default:'https://linkedin.com/company/vstech-ltd/' }}" class="mx-2 text-dark">in</span></a></li>
-                                                                                        <li><a href="{{ about.youtube|default:'https://www.youtube.com/channel/UCkedAOBJuj9d0cvTKFzWqmA?sub_confirmation=1' }}" class="mx-2 text-dark">yt</span></a></li>
-                                                                                    </ul>
-                                                                                </webversion>
-                                                                                <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                                                                                 <unsubscribe>
                                                                                     <a href="https://www.vstech.co.ke/unsubscribe/{{ recipient_email }}/" style="color: gray;">Unsubscribe</a>
                                                                                 </unsubscribe>
@@ -1548,6 +1526,7 @@
                                                     </tbody>
                                                 </table>
                                                 <!-- end preference -->
+
                                             </td>
                                         </tr>
                                     </tbody>
